--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 language: python
+python:
+  - "2.6"
+  - "2.7"
+  - "3.2"
+  - "3.3"
+  - "3.4"
 
 install:
   - pip install coverage
   - pip install python-coveralls
+
+script: coverage run --source=libcipher setup.py test
